== Version 0.0.3
* Enhancements


=== Version 0.0.2 / 2011-05-30
* Enhancements
  * Added support for the following elements
    * div
    * button
    * table
    * table row
    * table cell
  * Added #text to element

=== Version 0.0.1 / 2011-05-22
* Enhancements
  * Support for the following elements
    * check box
    * link
    * radio button
    * select list
    * text field
  
  * Support for the following page level functions
    * text
    * html
    * title